--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -58,6 +58,7 @@ main {
 .card-container {
   overflow: hidden;
   border-radius: 10px;
+  margin: auto;
   a {
     margin-top: rem(25px);
     padding: rem(12px) rem(26px);
